--- a/angularjs/loginApp/app/index.html
+++ b/angularjs/loginApp/app/index.html
@@ -15,14 +15,16 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="angular">
+  <body ng-app="loginApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-	index html
-    <div class="container" ui-view>
+    <!-- Add your site or application content here -->
 
+
+    <div class="container">
+    	<div ui-view></div>
     </div>
 
 
@@ -35,10 +37,9 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-		<script src="components/app.js" charset="utf-8"></script>
-		<script src="components/requests/requests.module.js" charset="utf-8"></script>
-		<script src="components/requests/requests.controller.js" charset="utf-8"></script>
+        <!-- build:js({.tmp,app}) src/scripts.js -->
+        <script src="src/app.js"></script>
+        <script src="src/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
